--- a/index.html
+++ b/index.html
@@ -471,6 +471,22 @@
 <!-- /sold-tickets -->
 
 
+<!-- social-instagram -->
+<section id="social-instagram" data-aos="fade-up">
+  <div class="kit-delivery__footer bg-green-dark-primary">
+    <h3 class="kit__footer-title" data-aos="fade-up" data-aos-delay="200">
+      SÍGUENOS EN INSTAGRAM <a href="https://www.instagram.com/futangue_challenge/?hl=es" target="_blank" class="instagram-handle">@futangue_challenge</a>
+    </h3>
+    <div class="kit__social" data-aos="fade-down" data-aos-delay="200">
+      <a href="https://www.instagram.com/futangue_challenge/?hl=es" target="_blank" class="kit__social-btn">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+  </div>
+</section>
+<!-- /social-instagram -->
+
+
 <!-- kit -->
 <section id="kit" data-aos="fade-up">
   <div class="container-fluid">
@@ -487,7 +503,7 @@
 <!-- how-to-get -->
 <section id="how-to-get" class="bg-green-light-primary" data-aos="fade-up">
   <div class="container-fluid">
-   <div class="row mt-4">
+   <div class="row mt-0">
      <div class="col-12 col-md-3 offset-md-2 d-flex mb-2 align-items-center htg-col-title my-4">
       <div class="text-left">
         <h2 class="text-white mb-0">¿Cómo Llegar?</h2>
