Update download links in index.html for the 25 Futangue Challenge; replace old PDF link with the new technical guide URL

--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
         </p>
         
         <div class="d-flex flex-column-reverse align-items-end align-items-md-end ">
-          <a href="https://efluj.com/events/25-futangue-challenge-by-asics-2026/terms" class="btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Reglamento</a>
-          <!--<a href="https://f000.backblazeb2.com/file/efluj-static/FC25_-_GUIA_TECNICA_V3.pdf" class="btn-info-futangue" target="_blank"><i class="fas fa-file-pdf mr-2"></i> Descargar Guía Técnica</a>  -->
+          <a href="https://efluj.com/events/25-futangue-challenge-by-asics-2026/terms" class="btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Reglamento</a>        
+          <a href="https://f000.backblazeb2.com/file/sporthub-static/FC25_-_GUIA_TECNICA2026.pdf" class="btn-info-futangue" target="_blank"><i class="fas fa-file-pdf mr-2"></i> Descargar Guía Técnica</a>
         </div>
         <img src="assets/img/ramita.png" alt="" class="ramita">
       </div>
